# LexDPR

./: .gitattributes  .gitignore  GUIDE.md  LICENSE  README.md  TODO_LIST.md  entrypoint_api.py  entrypoint_embed.py  entrypoint_train.py  pyproject.toml  requirements.txt  run_demo_real.sh  test.py  test_embedding_import.py  test_long_text.sh
.github/workflows/: sync_richer.yaml
configs/: base.yaml  data.yaml  model.yaml
data/admin_rules/: 2100000232360.json  2100000242712.json  2100000243142.json  2100000247598.json  2100000254312.json  2100000264790.json  2200000082677.json  2200000106135.json  2200000106255.json
data/crawler/: crawl_precedents.py  law_openapi_ingest.py  scourt_crawler.py
data/laws/: 000030.json  000130.json  000141.json  000534.json  000536.json  000549.json  001537.json  001539.json  001540.json  001549.json  001591.json  001702.json  001706.json  002000.json  003070.json  003083.json  003140.json  003440.json  003825.json  004105.json  004754.json  004797.json  006866.json  006909.json  007397.json  007643.json  008108.json  009205.json  009244.json  009256.json  009332.json  009348.json  009930.json  010199.json  010366.json  010513.json  010588.json  010817.json  010820.json  010910.json  (+20 more)
data/no_action_letters/: nal1.txt
data/precedents/: 147367.json  147370.json  147372.json  147375.json  147381.json  147594.json  147595.json  147596.json  147597.json  147598.json  147599.json  147600.json  147601.json  147602.json  147603.json  147604.json  147605.json  147606.json  147607.json  147608.json  147609.json  147610.json  147611.json  147612.json  147613.json  147614.json  147616.json  147617.json  147618.json  147619.json  147682.json  147683.json  147811.json  147812.json  147813.json  147814.json  147815.json  147816.json  147817.json  147818.json  (+22466 more)
docs/: DUAL_REPO_WORKFLOW.md  EVALUATE_MODEL.md  GIT_LFS_GUIDE.md  INCLUDE_MODEL_IN_PACKAGE.md  INSTALLATION_AND_USAGE.md  NEXT_STEPS_AFTER_DOWNLOAD.md  PACKAGE_DEPLOYMENT.md  SWEEP_GUIDE.md  TRAINING.md  TROUBLESHOOTING.md  WINDOWS_SETUP.md  bge_m3_oom_solution.md  comparison_flagembedding.md  memory_analysis.md  model_sizes.md  training_troubleshooting.md
lex_dpr/: __init__.py  data.py  eval.py  eval_detailed.py
lex_dpr/cli/: api.py  (+7 more)
models/: retriever.py  utils.py
output/: law_passages.jsonl  pairs_train.jsonl  prec_passages.jsonl
scripts/: analyze_pairs.py  analyze_passages.py  build_index.py  download_artifact_for_package.py  download_best_model.py  embed_corpus.py  encode_passages.py  encode_queries.py  estimate_memory.py  eval_chunk_units.py  eval_chunk_units.sh  evaluate.py  generate_chunk_comparison_report.py  generate_training_data.py  preprocess_acts.py  run_multiple_agents.sh  train.py  train_cfg.py  train_deprecated.py  train_dpr.py  upload_artifact_to_run.py
(+78 files in other folders)
