[tool.poetry]
name = "lexdpr"
version = "0.1.0"
description = ""
authors = ["zae-park <tom941105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = ">=2.8.0,<3.0.0"
transformers = ">=4.57.0,<5.0.0"
faiss-cpu = ">=1.12.0,<2.0.0"
numpy = ">=2.3.3,<3.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
tqdm = ">=4.67.1,<5.0.0"
datasets = ">=4.2.0,<5.0.0"
hydra-core = ">=1.3.2,<2.0.0"
omegaconf = ">=2.3.0,<3.0.0"
pydantic = ">=2.12.0,<3.0.0"
ujson = ">=5.11.0,<6.0.0"
rich = ">=14.2.0,<15.0.0"
sentencepiece = ">=0.2.1,<0.3.0"
pyyaml = ">=6.0.3,<7.0.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
