[tool.poetry]
name = "lexdpr"
version = "0.1.0"
description = "LexDPR: Legal Document Retriever & Reranker"
authors = ["zae-park <tom941105@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# ── Core DL stack ─────────────────────────────────────────
transformers = ">=4.38.0,<4.44.0"  # 4.44.x는 PyTorch 2.6 요구, 4.38-4.43 사용
accelerate = ">=0.31.0,<1.0.0"
sentence-transformers = ">=3.0.1,<4.0.0"
datasets = ">=2.18.0,<3.0.0"
evaluate = ">=0.4.2,<1.0.0"

# ── Torch (CUDA 12.1 환경 예시: 전용 인덱스에서 설치) ──
torch = [
  { version = ">=2.4,<2.6", source = "pytorch-cu121", markers = "platform_system != 'Darwin'" },
  { version = ">=2.4,<2.6", markers = "platform_system == 'Darwin'" } # mac은 PyPI 기본(MPS)
]
torchvision = [
  { version = ">=0.19,<0.21", source = "pytorch-cu121", markers = "platform_system != 'Darwin'" },
  { version = ">=0.19,<0.21", markers = "platform_system == 'Darwin'" }
]
torchaudio = [
  { version = ">=2.3,<2.6", source = "pytorch-cu121", markers = "platform_system != 'Darwin'" },
  { version = ">=2.3,<2.6", markers = "platform_system == 'Darwin'" }
]

# ── Vector search & others ────────────────────────────────
faiss-cpu = ">=1.8.0,<2.0.0"
numpy = ">=1.26.0,<3.0.0"
scikit-learn = ">=1.5.0,<2.0.0"
tqdm = ">=4.67.1,<5.0.0"
hydra-core = ">=1.3.2,<2.0.0"
omegaconf = ">=2.3.0,<3.0.0"
pydantic = ">=2.12.0,<3.0.0"
ujson = ">=5.11.0,<6.0.0"
pyyaml = ">=6.0.0,<7.0.0"
rich = ">=14.2.0,<15.0.0"
sentencepiece = ">=0.2.1,<0.3.0"
requests = ">=2.32.0,<3.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"
lxml = ">=5.0.0,<7.0.0"
peft = ">=0.10.0,<0.11.0"  # transformers 4.43와 호환되는 버전

# ── PyTorch wheel sources ─────────────────────────────────
typer = "^0.20.0"
[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
